--- a/Eggventur/.godot/editor/editor_layout.cfg
+++ b/Eggventur/.godot/editor/editor_layout.cfg
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://Main.tscn")
 current_scene="res://Main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ position=Vector2i(0, 34)
 [ScriptEditor]
 
 open_scripts=["res://Chicken.gd", "res://Egg.gd", "res://EggSpawner.gd", "res://Main.gd", "res://menu_background.gd", "res://Rock.gd", "res://StartMenu.gd", "res://TimeLabel.gd"]
-selected_script="res://menu_background.gd"
+selected_script="res://EggSpawner.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
