--- a/Eggventur/.godot/editor/editor_layout.cfg
+++ b/Eggventur/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://MenuRoot.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Main.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,11 +28,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Main.tscn")
+open_scenes=PackedStringArray("res://Main.tscn", "res://Rock.tscn", "res://Chicken.tscn")
 current_scene="res://Main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ position=Vector2i(0, 34)
 [ScriptEditor]
 
 open_scripts=["res://Chicken.gd", "res://Egg.gd", "res://EggSpawner.gd", "res://Main.gd", "res://menu_background.gd", "res://Rock.gd", "res://StartMenu.gd", "res://TimeLabel.gd"]
-selected_script="res://EggSpawner.gd"
+selected_script="res://Chicken.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
