--- a/Eggventur/.godot/editor/script_editor_cache.cfg
+++ b/Eggventur/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 38.0,
+"row": 52,
+"scroll_position": 44.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 36,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 40,
-"scroll_position": 12.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,11 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 49,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 66,
-"scroll_position": 0.0,
+"row": 63,
+"scroll_position": 51.99999999999999,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -59,10 +59,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 0.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -101,11 +101,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 68,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 15.0,
+"row": 24,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
